# ChangeLog for dev-python/pyisbn
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  12 Jul 2009; James Rowe <jnrowe@gmail.com> pyisbn-0.5.0.ebuild:
  Keyworded amd64.

  12 Jul 2009; James Rowe <jnrowe@gmail.com> pyisbn-0.5.0.ebuild:
  Keyworded x86.

*pyisbn-0.5.0 (23 May 2009)

  23 May 2009; James Rowe <jnrowe@gmail.com> +pyisbn-0.5.0.ebuild,
  +metadata.xml:
  Imported from pre-github misc overlay.
