@@ -2,13 +2,15 @@
 Hash: SHA1
 
 DIST pyisbn-0.5.0.tar.bz2 52299 RMD160 f112642c1a8daf71f1d8054676893afe89178ae4 SHA1 623e102575455e50168e0649cb1db4b4e0fb020c SHA256 72c095932f50f6e2d7a4e620eccbc11c2d98a40d95bc0901216b72ac75c3a945
+DIST pyisbn-0.5.1.tar.bz2 51069 RMD160 16ef3917ba04a9c453abd437162ec1092ee82308 SHA1 1810e0be53ab3484a4d29be5c488e7d0472f2329 SHA256 71a43147b22cb36ee6604874adc7eec9f92d370152485d04c56f5af74d1b371a
 EBUILD pyisbn-0.5.0.ebuild 473 RMD160 903fed5bfa5694bd77d53926ddfe69da3c353553 SHA1 7d7a70da8ac524ad1a7ddff3202e9e07569cafd7 SHA256 97d25e1209da11eddf76edd8e111b593a494762491b66b7c29ce47e1b9eec37b
-MISC ChangeLog 443 RMD160 df150bdde75fd2f3a9436ae6f2a4be4d9a060e61 SHA1 182ab7bf76a3fce9eaeb1de2092fb3063d67daad SHA256 ed6bdac1c5228941a68366cf4ab459a00fbea18c8d6b0bcc60347cfc1294d220
+EBUILD pyisbn-0.5.1.ebuild 475 RMD160 2f2ef8b2f185d53e230120d5b0cc10bb12eb2a3a SHA1 5d605079533191ca3f55da932ae059b23ef7da1f SHA256 4eea83a5e2a84b5dc08723c1c457bd48e1c20c34378c00bc33782d9371612499
+MISC ChangeLog 562 RMD160 19ee0d7b5b454ace50692a7b8902b00f97c14b30 SHA1 e1a072631d1a154072dc0f43a7b5387317ca8244 SHA256 7c0941afb33a01c98d683fb83b9e4aa3e0305f8f7657efcaa93831d5d994b66b
 MISC metadata.xml 551 RMD160 e8786026624165d0e12a3286bb4627e61715602a SHA1 f26e4848306d2c24a3a50cffb2d1d78e3014f6fc SHA256 d2050549aaa32a8d75c53ad9fd5b0edb56296932f367ba1d9caf67de9e6b43ae
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.11 (GNU/Linux)
 
-iEYEARECAAYFAkpaPs8ACgkQzJrj3cAXR0knlACgv57DUy45QQ5HwXuhh2mMT0MN
-vY4AnREeDrwTvGeQkBnNfVFLq8YeWmY0
-=c+Tk
+iEYEARECAAYFAkq0kyQACgkQzJrj3cAXR0kRAwCfZsRdh03+QdLkCdOiBusv/PGZ
+zf0Ani5aFH9hiXG8rCJ36zt9vDYbO8ij
+=xtMX
 -----END PGP SIGNATURE-----
