@@ -1,0 +1,22 @@
+dev-lang/python >=app-shells/bash-3.2 virtual/python
+dev-lang/python virtual/python
+0
+http://www.jnrowe.ukfsn.org/_downloads/pyisbn-0.5.1.tar.bz2
+
+http://www.jnrowe.ukfsn.org/projects/pyisbn.html
+GPL-3
+A module for working with 10- and 13-digit ISBNs
+~amd64 ~x86
+distutils eutils multilib portability python toolchain-funcs
+
+
+
+
+
+
+compile install postinst postrm test unpack
+
+
+
+
+
