@@ -2,6 +2,11 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*pyisbn-0.5.1 (19 Sep 2009)
+
+  19 Sep 2009; James Rowe <jnrowe@gmail.com> +pyisbn-0.5.1.ebuild:
+  Version bump [7eb].
+
   12 Jul 2009; James Rowe <jnrowe@gmail.com> pyisbn-0.5.0.ebuild:
   Keyworded amd64.
 
